  command as applied to VECMs
- Multiple fixes for session icon handling
- LAD models: print the median of the dependent variable
- Matrix properties window in GUI: add an indication of whether
  or not a square matrix is idempotent
- Panel data, pooled OLS model: when robust standard errors are
  chosen, use the Arellano-type HAC estimator (well, it's HAC
  when the time-series dimension is small) 
- Panel data, "summary" command for single variable: show the
  within and between standard deviations
- Add "--quiet" option to lmtest command (don't print the
  auxiliary regression)
- Observation labels: ensure these are properly XML-encoded when
  saving a data set as gdt
- Fix bug that could cause a crash when exiting the program on
  MS Windows
- Fix an encoding issue with the command-line help files on
  platforms where the default encoding is UTF-8
- Correlation matrix: try to be smarter in face of non-aligned
  missing observations
- CSV data: add support for Mac-style text files
- Various modifications to the configuration process

3/24/2007 version 1.6.2
- Add Poisson distribution to p-value finder
- Fix breakage in GUI "graph page" apparatus
- Graph page: give color / monochrome option
- Bivariate scatterplots: give the option of showing various sorts
  of fitted line: linear, quadratic, inverse or loess
- Monochrome EMF graphs: make sure point types are distinct for
  different series
- Internal clean-up of the graphing code
- Make frequency plots more configurable via the GUI
- Fix memory leaks in GUI graph editor dialog
- Bugfix: estimating models inside nested functions could cause
  a crash
- Session icon window: don't display temporary matrices,
  generated within functions
- Icon window: fix display on one-character object names
- Fix memory leak when generating some sorts of matrices
- Add option of using Parzen or Quadratic Spectral kernel (the 
  default is Bartlett) when computing HAC covariance matrix