@@ -35,100 +35,6 @@ static const char *wspace_fail = "gretl_matrix: workspace query failed\n";
 
 #define SVD_SMIN 1.0e-9
 
-/**
- * gretl_matrix_get:
- * @m: matrix to get data from.
- * @i: row index (zero-based).
- * @j: column index (zero-based).
- *
- * Retrieves the data value from the specified row and column
- * of @m.
- * 
- * Returns: the data value, or #NADBL if the indices are out
- * of range for @m.
- */
-
-double gretl_matrix_get (const gretl_matrix *m, int i, int j)
-{
-    if (m == NULL || m->val == NULL || i < 0 || j < 0 ||
-	i >= m->rows || j >= m->cols) {
-	return NADBL;
-    }
-
-    return m->val[mdx(m, i, j)];
-}
-
-/**
- * gretl_vector_get:
- * @v: vector to get data from.
- * @i: index (zero-based).
- *
- * Retrieves the ith value from the specified vector.
- * 
- * Returns: the data value, or #NADBL if the index is out
- * of range for @v.
- */
-
-double gretl_vector_get (const gretl_vector *v, int i)
-{
-    if (v == NULL || v->val == NULL || i < 0 || 
-	(i >= v->rows && i >= v->cols)) {
-	return NADBL;
-    }
-
-    return v->val[i];
-}
-
-/**
- * gretl_matrix_set:
- * @m: matrix to operate on.
- * @i: row index (zero-based).
- * @j: column index (zero-based).
- * @x: value to set.
- *
- * Sets element @i, @j of @m to the value @x, if the 
- * row and column are within bounds.
- *
- * Returns: 0 on success, or 1 if the indices are out 
- * of range for @m.
- */
-
-int gretl_matrix_set (gretl_matrix *m, int i, int j, double x)
-{
-    if (m == NULL || m->val == NULL || i < 0 || j < 0 ||
-	i >= m->rows || j >= m->cols) {
-	return 1;
-    }
-
-    m->val[mdx(m, i, j)] = x;
-
-    return 0;
-}
-
-/**
- * gretl_vector_set:
- * @v: vector to operate on.
- * @i: index (zero-based).
- * @x: value to set.
- *
- * Sets element i of @v to the value @x.
- * 
- * Returns: 0 on success, or 1 if the given index is 
- * out of range for @v.
- */
-
-int gretl_vector_set (gretl_vector *v, int i, double x)
-{
-    if (v == NULL || v->val == NULL || i < 0 ||
-	(i >= v->rows && i >= v->cols)) {
-	return 1;
-    }
-
-    v->val[i] = x;
-
-    return 0;
-}
-
 /* An efficient means of allocating temporary storage for lapack
    operations: this should be used _only_ for temporary allocations
    that would ordinarily be freed before returning from the function
